@@ -1,5 +1,6 @@
 import java.util.*;
 import java.util.stream.*;
+import static java.util.stream.Collectors.toList;
 
 public class PalindromeCalculator {
 
@@ -14,18 +15,16 @@ public class PalindromeCalculator {
         final List<Long> palindromes = 
                         palindromeProducts(min, max)
                         .stream()
-                        .collect(Collectors.toList());
+                        .collect(toList());
         
-        if (palindromes.isEmpty()) {
+        if (palindromes.isEmpty()) { 
             return new TreeMap<>();
         }
 
-        final long first = 
-                    palindromes.get(0);
-        final long last = 
-                    palindromes.get(palindromes.size() - 1);
+        final long first = palindromes.get(0);
+        final long last = palindromes.get(palindromes.size() - 1);
 
-        return new TreeMap<>(
+        return new TreeMap<>(                       // doesn't work below java9
             Map.of(first, factors(first, min, max),
                    last, factors(last, min, max))
         );
@@ -34,14 +33,13 @@ public class PalindromeCalculator {
     private List<Long> palindromeProducts(long min, long max) {
         return LongStream
                .rangeClosed(min, max)
-               .flatMap(x -> LongStream
-                             .rangeClosed(min, max)
-                             .map(i -> x * i)
-                             .filter(i -> isPalindrome(i))                             )
+               .flatMap(x -> LongStream.rangeClosed(min, max)
+                                       .map(i -> x * i)
+                                       .filter(i -> isPalindrome(i))                             )
                .distinct()
                .sorted()
                .boxed()
-               .collect(Collectors.toList());
+               .collect(toList());
     }
 
     private List<List<Integer>> 
@@ -54,20 +52,18 @@ public class PalindromeCalculator {
                    .mapToInt(x -> (int) x)
                    .boxed()
                    .map( x -> Stream.of(x, (int) num / x)
-                                   .sorted()
-                                   .collect(Collectors
-                                            .toList()))
+                                    .sorted()
+                                    .collect(toList()))
                    .distinct()
-                   .collect(Collectors.toList());
+                   .collect(toList());
     }
 
     private boolean isPalindrome(long num) {
         return String
                .valueOf(num)
                .equals(
-                   new StringBuilder(String.valueOf(num))
-                   .reverse()
-                   .toString()
+                   new StringBuilder(String.valueOf(num)).reverse()
+                                                         .toString()
                 );
     }
 }
